Fix displaying language scrollbar (#1779)

--- a/src/client/components/PopoverMenu/PopoverMenu.less
+++ b/src/client/components/PopoverMenu/PopoverMenu.less
@@ -1,6 +1,6 @@
 .PopoverMenu {
   max-height: 55vh;
-  overflow-y: auto;
+  overflow-y: visible;
 
   & .iconfont,
   & .anticon {
